[project]
name = "streamlit-langchain-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "watanany", email = "s1170087@gmail.com" }
]
dependencies = [
    "streamlit>=1.29.0",
    "watchdog>=3.0.0",
    "langchain>=0.0.27",
    "openai>=1.3.9",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=4.1.0",
    "wikipedia>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true
