[tool.poetry]
name = "streamlit-langchain-app"
version = "0.1.0"
description = ""
authors = ["watanany <watanabe.s@note.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
watchdog = "^3.0.0"
langchain = "^0.0.350"
openai = "^1.4.0"
duckduckgo-search = "^4.1.0"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
